Fixed an issue with flashing blocked images in Chrome-based browsers Fixed a bug with hiding everything on Options tab in FF Changes styles for FF extension UI (underscore symbol is now visible when you edit user filter) Some minor optimizations

--- a/Extension/pages/skin/style.css
+++ b/Extension/pages/skin/style.css
@@ -361,12 +361,12 @@ body{
 .splw-table-row-label, .splu-table-row-label{
     float: left;
     width: 94%;
-    margin: 2px 0 0;
     font: 400 14px/15px arial, sans-serif;
     color: #333;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    line-height: 16px;
 }
 .spl-user-table-row.editing{
     background: #fff;
@@ -393,6 +393,7 @@ body{
     padding: 0;
     width: 80%;
     font: 400 14px/15px arial, sans-serif;
+    line-height: 16px;
 }
 .splw-table-row-options, .splu-table-row-options{
     float: right;
